# tvha

./: .gitignore  .gitlab-ci.yml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
examples/: vha_circuit_drawing.ipynb  vha_examples.py  vha_minimal_example.py  vha_plots.py
examples/data_for_paper_tvha/: ch2_opt.xyz  ch_opt.xyz  no3_opt.xyz
examples/data_for_paper_tvha/plots_CH2/: circuit_counts_hea.json  circuit_counts_vha.csv  energies_vha_statevector.csv  energy_hea.json  energy_numerical.json  energy_uccsdt.json
examples/data_for_paper_tvha/plots_H2/: circuit_counts_uccsdt.json  circuit_counts_vha.csv  energies_vha_statevector.csv  energy_hea.json  energy_numerical.json  energy_results.txt  energy_uccsd.json
examples/data_for_paper_tvha/plots_H4/: circuit_counts_hea.json  circuit_counts_uccsd.json  circuit_counts_uccsdt.json  circuit_counts_vha.csv  energies_vha_statevector.csv  energy_hea.json  energy_numerical.json  energy_results.txt  energy_uccsd.json  energy_uccsdt.json
examples/data_for_paper_tvha/plots_LiH/: circuit_counts_hea.json  circuit_counts_uccsd.json  circuit_counts_uccsdt.json  circuit_counts_vha.csv  energies_vha_statevector.csv  energy_hea.json  energy_numerical.json  energy_results.txt  energy_uccsd.json  energy_uccsdt.json
tests/: test_tvha.py
tvha/: __init__.py  efficientsu2_hartreefock.py  fermionic_operator.py  nloptimizer.py  sbplx.py  tvha.py
vha/: __init__.py  auxiliary.py  fermionic_operator.py  nloptimizer.py  vha.py
