[build-system]
requires = ["setuptools>=80.0", "setuptools-scm>=8.3"]
build-backend = "setuptools.build_meta"

[project]
name = "tvha"
readme = "README.md"
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "matplotlib>=3.10",
    "nlopt>=2.9",
    "numpy>=2.2",
    "opt_einsum>=3.4",
    "pandas>=2.2",
    "pyjson5>=1.6",
    "pyscf>=2.9;sys_platform=='linux'",
    "qiskit>=1.4,<2",
    "qiskit_algorithms>=0.3.1",
    "qiskit_machine_learning>=0.9",
    "qiskit_nature>=0.7",
    "tqdm>=4.67",
]

[project.optional-dependencies]
develop = [
    "mypy>=1.15",
    "nox>=2025.2",
    "pytest>=8.3",
    "ruff>=0.11",
]

[project.urls]
repository = "https://github.com/cpossel/tvha"

[tool.setuptools]
py-modules = ["tvha"]

[tool.setuptools_scm]
write_to = "tvha/__version__.py"

[tool.mypy]
follow_imports = "silent"
ignore_missing_imports = true
show_column_numbers = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ['tests/']

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
extend-select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "D",
    "UP",
    "ANN",
    "S",
    "B",
    "A",
    "C4",
    "ISC",
    "ICN",
    "G",
    "PIE",
    "RET",
    "SLF",
    "SIM",
    "ARG",
    "PTH",
    "RUF",
]
ignore = ["D208", "D209", "SIM105"]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*test*.py"]
addopts = [
    "--import-mode=importlib",
]